plugins {
    id "org.owasp.dependencycheck" version "5.3.2.1"
    id "com.github.spotbugs" version "4.5.0"
    id "com.github.johnrengelman.shadow" version "6.0.0"
    id "java"
}

repositories {
    jcenter()
    mavenCentral()
}

sourceCompatibility = 11
targetCompatibility = 11

dependencies {
    implementation 'org.slf4j:slf4j-api:1.7.30'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.13.3'
    implementation 'org.apache.logging.log4j:log4j-api:2.13.3'
    implementation 'org.apache.logging.log4j:log4j-core:2.13.3'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'com.github.spotbugs:spotbugs-annotations:4.0.1'
}

group = 'EmeraldLauncher'
version = '1.5'

jar {
    manifest {
        attributes "Version" : project.version
        attributes "Main-Class": "Launcher.Main"
    }
}